--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "root",
   "private": true,
+  "scripts": {
+    "bump-version": "npx lerna version --no-push --yes"
+  },
   "devDependencies": {
     "lerna": "^3.22.1"
   }
